# LLM-Orchestrator

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES  commitlint.config.cjs  conftest.py  docker-compose.yml  mkdocs.yml  project.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
assets/: .gitkeep
docs/: advanced_architecture.md  architecture_overview.md  provenance_audit.md
docs/adr/: 0001-repository-structure.md
examples/: demo_artifacts.py  demo_repl.py  demo_tool_normalization.py  demo_tool_versioning.py  visualization_demo.py
infra/docker/: Dockerfile
jsonschema/: __init__.py
orchestrator/: __init__.py  cli.py  event_log.py
orchestrator/artifacts/: __init__.py
orchestrator/compliance/: audit.py
orchestrator/context/: assembler.py
orchestrator/repl/: __init__.py
orchestrator/sandbox/: __init__.py  confidential.py  sandbox.py  workers.py
orchestrator/security/: differential_privacy.py  hsm.py  mpc.py  pii.py
orchestrator/tools/: __init__.py
scripts/: _common.sh  add_spdx_header.py  bootstrap  build  check  clean  coverage  dev  e2e  fmt  gen-docs  lint  migrate  package  release  sbom  security-scan  test  typecheck  update-deps
scripts/powershell/: bootstrap.ps1  build.ps1  check.ps1  clean.ps1  common.ps1  coverage.ps1  dev.ps1  e2e.ps1  (+11 more)
tests/: conftest.py  fixed_test_tool_worker.py  test_artifacts.py  test_event_log.py  test_repl.py  test_security_features.py  test_sla.py  test_tool_normalization.py
(+47 files in other folders)
